<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>net.clementlevallois.functions</groupId>
    <artifactId>similarity-function</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>Similarity function</name>

    <properties></properties>

    <dependencies>
        <dependency>
            <groupId>net.clementlevallois.utils</groupId>
            <artifactId>utils-core</artifactId>
            <version>0.13</version>
        </dependency>
        <!--for tests-->
        
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins> 
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <source>19</source>
                    <target>19</target>
                </configuration>
            </plugin>
            <plugin>
                <!-- Build an executable JAR -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>net.clementlevallois.functions.similarity.Controller</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId> 
                <version>3.5.0</version>
                <executions> 
                    <execution> 
                        <phase>install</phase> 
                        <goals> 
                            <goal>copy-dependencies</goal> 
                        </goals> 
                        <configuration> 
                            <outputDirectory>${project.build.directory}/lib</outputDirectory> 
                        </configuration> 
                    </execution> 
                </executions> 
            </plugin> 
        </plugins> 
    </build>
</project>